Finished with the pages. Fixed the collapsed navbar not responding. Added actual english to the homepage.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -81,32 +81,85 @@ html, body{
 #about-paragraph{
   font-weight: 600;
 }
-.bot-list-content{
-  margin-left: 30%;
+.list-img-link{
+  padding-left: 3%;
+  padding-right: 3%;
 }
-.bot-list-content li{
-  padding-right: 10%;
-}
-.image-title{
-  color: black;
-  text-decoration: underline;
+.hovereffect {
+  width: 100%;
+  height: 100%;
+  float: left;
+  overflow: hidden;
+  position: relative;
   text-align: center;
+  cursor: default;
 }
-.image-caption{
-  width: 5%;
-  top: 35%;
+
+.hovereffect .overlay {
+  width: 100%;
+  height: 100%;
   position: absolute;
-  color: #c87125;
-  text-decoration: underline;
-  text-shadow: 1px 2px 2px black;
-  display: none;
+  overflow: hidden;
+  top: 0;
+  left: 0;
 }
-#first-caption{
-  left: 40%;
+
+.hovereffect img {
+  display: block;
+  position: relative;
+  -webkit-transition: all 0.4s ease-in;
+  transition: all 0.4s ease-in;
 }
-#second-caption{
-  color: black;
-  left: 54%;
+
+.hovereffect:hover img {
+  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /><feGaussianBlur stdDeviation="3" /></filter></svg>#filter');
+  filter: grayscale(1) blur(3px);
+  -webkit-filter: grayscale(1) blur(3px);
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+.hovereffect h2 {
+  text-transform: uppercase;
+  text-align: center;
+  position: relative;
+  font-size: 17px;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.hovereffect a.info {
+  display: inline-block;
+  text-decoration: none;
+  padding: 7px 14px;
+  border: 1px solid #fff;
+  margin: 50px 0 0 0;
+  background-color: transparent;
+}
+
+.hovereffect a.info:hover {
+  box-shadow: 0 0 5px #fff;
+}
+
+.hovereffect a.info, .hovereffect h2 {
+  -webkit-transform: scale(0.7);
+  -ms-transform: scale(0.7);
+  transform: scale(0.7);
+  -webkit-transition: all 0.4s ease-in;
+  transition: all 0.4s ease-in;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.hovereffect:hover a.info, .hovereffect:hover h2 {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
 }
 .jumbotron{
   background-color: white;
@@ -181,6 +234,10 @@ footer {
 }
 
 @media (max-width: 575px) {
+  .bottom-list{
+    display: none;
+  }
+  
   .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item {
     color: #ecf0f1;
   }
